--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,41 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="5dp">
+
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp">
+
+                    <ImageButton
+                        android:id="@+id/menu1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="13dp"
+                        android:layout_marginRight="10dp"
+                        android:background="#00FFFFFF"
+                        app:srcCompat="@drawable/menu" />
+                </FrameLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/binggrae_bold"
+                    android:gravity="center|center_horizontal"
+                    android:text="Good Care"
+                    android:textColor="#7986CB"
+                    android:textSize="36sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/tab"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -30,14 +65,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
-                    android:background="#FAE0D4"
+                    android:background="#00FDC2A9"
+                    android:fontFamily="@font/binggrae"
+                    android:gravity="left|center_vertical"
+                    android:paddingLeft="5dp"
+                    android:paddingTop="5dp"
+                    android:paddingRight="5dp"
                     android:stateListAnimator="@null"
-                    android:text="맡기기"
-                    android:textColor="#FFFFFF"
-                    android:textSize="18sp"
+                    android:text="돌보미"
+                    android:textColor="#FDC2A9"
+                    android:textSize="22sp"
                     android:textStyle="bold" />
 
                 <Button
@@ -45,44 +85,52 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
-                    android:background="#FAE0D4"
+                    android:background="#00FDC2A9"
+                    android:fontFamily="@font/binggrae"
+                    android:gravity="left|center_vertical"
+                    android:paddingLeft="5dp"
+                    android:paddingTop="5dp"
+                    android:paddingRight="5dp"
                     android:stateListAnimator="@null"
                     android:text="정보 공유"
-                    android:textColor="#FFFFFF"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <Button
-                    android:id="@+id/btn_third"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="1"
-                    android:background="#FAE0D4"
-                    android:stateListAnimator="@null"
-                    android:text="관리"
-                    android:textColor="#FFFFFF"
-                    android:textSize="18sp"
+                    android:textColor="#FDC2A9"
+                    android:textSize="22sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
 
-            <View
-                android:id="@+id/view"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="3dp"
-                android:background="#FAE0D4" />
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp">
+
+                <View
+                    android:id="@+id/view2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="3dp"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:background="#7986CB" />
+
+                <View
+                    android:id="@+id/view4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="3dp"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:background="#00FFFFFF" />
+            </LinearLayout>
 
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/pager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                >
+                android:layout_margin="5dp">
 
             </androidx.viewpager.widget.ViewPager>
 
