--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">#D9E5FF</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
@@ -12,5 +12,9 @@
         <item name="android:windowBackground">@drawable/splash</item>
     </style>
 
+    <style name="TabTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+
+        <item name="colorAccent">#FDC2A9</item>                    <!-- 하단 움직이는 바 색-->
+    </style>
 
 </resources>
