--- a/app/src/main/res/layout/fragment1.xml
+++ b/app/src/main/res/layout/fragment1.xml
@@ -19,8 +19,8 @@
             android:stateListAnimator="@null" />
 
         <TextView
-            android:id="@+id/editText"
-            android:layout_width="wrap_content"
+            android:id="@+id/location"
+            android:layout_width="233dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
