--- a/app/src/main/res/layout/activity_dialog.xml
+++ b/app/src/main/res/layout/activity_dialog.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#FBE9E7"
+    android:layout_width="300dp"
+    android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    android:gravity="center"
     android:orientation="vertical"
     android:padding="15dp"
     tools:context=".Dialog_a">
@@ -13,17 +14,36 @@
         android:id="@+id/spinner1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_margin="5dp" />
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        android:layout_weight="1"
+        android:gravity="center|center_horizontal|center_vertical" />
 
     <Spinner
         android:id="@+id/spinner2"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_margin="5dp" />
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        android:layout_weight="1"
+        android:gravity="center" />
 
     <Spinner
         android:id="@+id/spinner3"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_margin="5dp" />
+        android:layout_margin="5dp"
+        android:layout_weight="1"
+        android:gravity="center" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="#FDC2A9"
+        android:fontFamily="@font/binggrae_bold"
+        android:text="확인"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp" />
 </LinearLayout>
