--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,9 +12,9 @@
         <item name="android:windowBackground">@drawable/splash</item>
     </style>
 
-    <style name="TabTheme" parent="Theme.AppCompat.Light.DarkActionBar">
 
-        <item name="colorAccent">#FDC2A9</item>                    <!-- 하단 움직이는 바 색-->
+    <style name="Theme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">#FDC2A9</item>                    <!-- 하단 움직이는 바 색-->
     </style>
 
 </resources>
