--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -21,15 +21,33 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textView1"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Join"
-                android:textColor="#7986CB"
-                android:textSize="60sp"
-                app:fontFamily="@font/binggrae_bold" />
+                android:layout_height="wrap_content">
+
+                <ImageButton
+                    android:id="@+id/imageButton"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_alignLeft="@id/textView1"
+                    android:layout_alignParentLeft="true"
+                    android:layout_gravity="left"
+                    android:layout_marginTop="10dp"
+                    android:background="#00FFFFFF"
+                    app:srcCompat="@drawable/back" />
+
+                <TextView
+                    android:id="@+id/textView1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="140dp"
+                    android:gravity="center"
+                    android:text="Join"
+                    android:textColor="#7986CB"
+                    android:textSize="60sp"
+                    app:fontFamily="@font/binggrae_bold" />
+            </RelativeLayout>
+
         </LinearLayout>
 
         <LinearLayout
