--- a/app/src/main/res/layout/fragment2.xml
+++ b/app/src/main/res/layout/fragment2.xml
@@ -7,7 +7,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textSize="30dp"
-        android:textStyle="bold"
-        android:text="11Second_Page" />
+        android:textStyle="bold" />
 
 </RelativeLayout>
