--- a/app/src/main/res/layout/activity_dialog1.xml
+++ b/app/src/main/res/layout/activity_dialog1.xml
@@ -4,12 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
-    android:orientation="vertical"
-    android:weightSum="1">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="3dp"
         android:gravity="right"
         android:orientation="vertical"
         android:padding="5dp">
@@ -130,14 +131,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
+            android:layout_marginLeft="10dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/size_value"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
 
                 android:textSize="14sp"
                 app:fontFamily="@font/binggrae" />
@@ -164,6 +164,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -171,7 +172,6 @@
                 android:id="@+id/date_value"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
                 android:textSize="14sp"
                 app:fontFamily="@font/binggrae" />
         </LinearLayout>
@@ -179,13 +179,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/time_value"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
                 android:textSize="14sp"
                 app:fontFamily="@font/binggrae" />
         </LinearLayout>
@@ -210,7 +210,7 @@
             android:background="#FDC2A9"
             android:text="주인과 채팅하기"
             android:textColor="#FFFFFF"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:fontFamily="@font/binggrae" />
 
@@ -222,7 +222,7 @@
             android:background="#FDC2A9"
             android:text="닫기"
             android:textColor="#FFFFFF"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:fontFamily="@font/binggrae" />
     </LinearLayout>
