--- a/app/src/main/res/layout/activity_dialog1.xml
+++ b/app/src/main/res/layout/activity_dialog1.xml
@@ -112,6 +112,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/size_1"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
