--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -16,7 +16,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="120dp"
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:orientation="horizontal">
@@ -254,6 +254,49 @@
                 app:fontFamily="@font/binggrae" />
 
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="3dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="주소 : "
+                android:textColor="#FDC2A9"
+                android:textSize="20sp"
+                app:fontFamily="@font/binggrae_bold" />
+
+            <TextView
+                android:id="@+id/location"
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="위치를 선택해주세요."
+                android:textSize="18sp"
+                app:fontFamily="@font/binggrae" />
+
+        </LinearLayout>
+
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginBottom="20dp">
+
+            <View
+                android:id="@+id/view3"
+                android:layout_width="270dp"
+                android:layout_height="1dp"
+                android:layout_gravity="right"
+                android:background="#737373" />
+        </FrameLayout>
 
         <Button
             android:id="@+id/button2"
