--- a/app/src/main/res/layout/fragment2.xml
+++ b/app/src/main/res/layout/fragment2.xml
@@ -12,7 +12,7 @@
 
         <Spinner
             android:id="@+id/spinner"
-            android:layout_width="360dp"
+            android:layout_width="340dp"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_marginStart="3dp"
@@ -25,9 +25,9 @@
 
         <ImageButton
             android:id="@+id/imageButton2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:layout_margin="8dp"
             android:layout_weight="1"
             android:background="#00FFFFFF"
             app:srcCompat="@drawable/pencil" />
