--- a/app/src/main/res/layout/activity_dialog1.xml
+++ b/app/src/main/res/layout/activity_dialog1.xml
@@ -218,6 +218,7 @@
             android:layout_weight="1"
             android:background="#FDC2A9"
             android:text="주인과 채팅하기"
+            android:stateListAnimator="@null"
             android:textColor="#FFFFFF"
             android:textSize="14sp"
             android:textStyle="bold"
@@ -229,6 +230,7 @@
             android:layout_height="30dp"
             android:layout_weight="1"
             android:background="#FDC2A9"
+            android:stateListAnimator="@null"
             android:text="닫기"
             android:textColor="#FFFFFF"
             android:textSize="14sp"
