--- a/app/src/main/res/layout/fragment2.xml
+++ b/app/src/main/res/layout/fragment2.xml
@@ -7,25 +7,20 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <Spinner
             android:id="@+id/spinner"
-            android:layout_width="340dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:layout_marginStart="3dp"
-            android:layout_marginEnd="3dp"
-            android:background="#FDC2A9"
-            android:fontFamily="@font/binggrae_bold"
-            android:gravity="center_horizontal"
-            android:textColor="#FFFFFF"
-            android:textSize="18sp" />
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:background="#00FFFFFF" />
 
         <ImageButton
             android:id="@+id/imageButton2"
-            android:layout_width="60dp"
+            android:layout_width="100dp"
             android:layout_height="40dp"
             android:layout_margin="8dp"
             android:layout_weight="1"
@@ -33,5 +28,10 @@
             app:srcCompat="@drawable/pencil" />
 
     </LinearLayout>
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 
 </LinearLayout>
